--- a/lotteryRef/lotteryRef_1.html
+++ b/lotteryRef/lotteryRef_1.html
@@ -7,51 +7,43 @@
                 <ul>
                     <li>
                         <a href="#/lotteryRef?p=2" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef2_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef2_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
                                     <div class="title">Kèo nhà cái: Nhận định trận đấu Anh vs Scotland</div>
                                     <p>Cuộc đối đầu giữa Anh vs Scotland tại Vòng bảng EURO 2020 vào lúc 02h00 ngày 19/6 được ...</p>
                                 </div>
-                                <a href="#/lotteryRef?p=2">
-                                    <button class="moreBtn"><span>Read more »</span></button>
-                                </a>
-
+                                <div class="fullList_tool">
+                                    <div class="more">Thông tin xổ số</div>
+                                </div>
                             </div>
                         </a>
                     </li>
+
                     <li>
                         <a href="#/lotteryRef?p=3" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef3_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef3_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Xổ số- cờ bạc hay trò chơi giải trí?</div>
-                                    <p>Xổ số là trò chơi không phải dành cho người nghèo và nếu Nhà nước biết cách quản lý thì sẽ phát huy được lợi ích của </p>
+                                    <div class="title">Nhà cái uy tín Fun88- Vé cược thể thao miễnphí</div>
+                                    <p>Nhà cái uy tín Fun88 được thành lập vào ngày 01/06/2008, đã có thâm niên nhiều năm hoạt ...</p>
                                 </div>
                                 <div class="fullList_tool">
                                     <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>24-06 19:53</span>
-                                    </p>
                                 </div>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#/lotteryRef?p=4" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef4_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef4_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Tình tiết mới vụ nhầm kết quả xổ số ở Hậu Giang: Giám đốc cty xổ số nói gì với quay phim?</div>
-                                    <p>TPO - Khi em thiếu nhi rút nhầm thẻ số 7, một thành viên Hội đồng Giám sát (HĐGS) Xổ số kiến thiết (XSKT) tỉnh thắc mắc. Thư ký HĐGS đi xác minh, qu&aac</p>
+                                    <div class="title">Nhà cái uy tín AE888- AE GAMING MƯA LÌ XÌ – GIỮA MÙA HÈ</div>
+                                    <p>Nhà cái uy tín AE888 khuyến mãi siêu hấp dẫn tại AE GAMING ☆Nhà cái AE888 là nhà ...</p>
                                 </div>
                                 <div class="fullList_tool">
                                     <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>17-06 07:44</span>
-                                    </p>
                                 </div>
                             </div>
                         </a>
@@ -59,18 +51,14 @@
 
                     <li>
                         <a href="#/lotteryRef?p=5" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef5_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef5_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Phá đường dây ghi lô đề hơn 15 tỷ</div>
-                                    <p>Giang, Sơn, Pháp cùng hơn 50 người thành lập đường dây đánh bạc bằng hình thức ghi lô đề. Trong 3 tháng, số tiền nhóm nghi phạm giao dịch l</p>
+                                    <div class="title">Cách chơi Baccarat – Hướng dẫn bạn cách thắng tiền tại AE 888</div>
+                                    <p>Công thức Baccarat ｜ Baccarat ăn tiền ｜ Baccarat kiếm tiền ｜ Cách chơi Baccarat Nhiều người trong ...</p>
                                 </div>
                                 <div class="fullList_tool">
                                     <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>11-06 18:09</span>
-                                    </p>
                                 </div>
                             </div>
                         </a>
@@ -78,18 +66,14 @@
 
                     <li>
                         <a href="#/lotteryRef?p=6" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef6_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef6_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Người trúng thưởng xổ số được yêu cầu giữ bí mật thông tin</div>
-                                    <p>Đó là một trong những đề xuất mà Bộ Tài chính đưa ra để lấy ý kiến tại Dự thảo Thông tư hướng dẫn hoạt động kinh doanh xổ số tự chọn số điện toán</p>
+                                    <div class="title">Kỹ Năng Chơi Baccarat-2 Công Thức Chiến Thắng Baccarat Tại AE SEXY</div>
+                                    <p>Kỹ năng chơi Baccarat có rất nhiều cách và phương pháp nhưng sau đây là 2 cách dễ ...</p>
                                 </div>
                                 <div class="fullList_tool">
                                     <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>10-06 22:57</span>
-                                    </p>
                                 </div>
                             </div>
                         </a>
@@ -97,36 +81,28 @@
 
                     <li>
                         <a href="#/lotteryRef?p=7" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef7_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef7_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Mỹ tặng tiền, bia, mở xổ số 1 triệu USD cổ vũ dân tiêm vắc xin COVID-19</div>
-                                    <p>TTO - Chính quyền các bang và doanh nghiệp Mỹ đang dùng đủ mọi cách từ tặng tiền, xổ số đến đăng quảng cáo... để khuyến khích người dân đi ti&eci</p>
+                                    <div class="title">123BET-NẠP LẦN ĐẦU TẶNG 50%</div>
+                                    <p>Tặng 50% giá trị nạp tiền cho lần nạp tiền đầu tiên. ☆Áp dụng cho: Thể Thao, Keno, ...</p>
                                 </div>
                                 <div class="fullList_tool">
                                     <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>07-06 20:44</span>
-                                    </p>
                                 </div>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href="#/lotteryRef?p=8" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef8_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef8_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Thu ngân sách từ thuế vẫn tăng mạnh bất chấp dịch bệnh</div>
-                                    <p>Trong tháng 5, tổng thu ngân sách Nhà nước do cơ quan Thuế quản lý ước đạt 73.000 tỷ đồng, tương đương 6,5% dự toán và tăng 20,1% so với cùng kỳ </p>
+                                    <div class="title">FUN88-ĐẶC BIỆT! KHUYẾN MÃI THÀNH VIÊN VIP</div>
+                                    <p>TẬN HƯỞNG ƯU ĐÃI VIP LÊN ĐẾN 0.8% Thời gian Khuyến mãi: 01/01/2021 (00:00 giờ GMT+8) cho đến khi ...</p>
                                 </div>
                                 <div class="fullList_tool">
                                     <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>07-06 18:39</span>
-                                    </p>
                                 </div>
                             </div>
                         </a>
@@ -134,18 +110,14 @@
 
                     <li>
                         <a href="#/lotteryRef?p=9" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef9_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef7_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Vứt nhầm 12 tờ vé số trị giá 180 triệu, cả xóm lục tung thùng rác tìm giữa đêm khuya</div>
-                                    <p>Được biết, chiếc vé cuối cùng cũng đã chịu "xuất đầu lộ diện" trong một thùng rác ở góc phố!Mới đây, một xóm nhỏ tại huyện Thạnh Hóa (Long</p>
+                                    <div class="title">123BET-ĐĂNG KÝ NHẬN NGAY 100K</div>
+                                    <p>Đăng ký và tải APP nhận ngay 100k. ☆Nội dung khuyến mãi : 1.Hội viên đăng ký tài ...</p>
                                 </div>
                                 <div class="fullList_tool">
                                     <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>06-06 21:48</span>
-                                    </p>
                                 </div>
                             </div>
                         </a>
@@ -153,18 +125,14 @@
 
                     <li>
                         <a href="#/lotteryRef?p=10" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef10_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef8_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Vứt nhầm 12 tờ vé số trị giá 180 triệu, cả xóm lục tung thùng rác tìm giữa đêm khuya</div>
-                                    <p>Được biết, chiếc vé cuối cùng cũng đã chịu "xuất đầu lộ diện" trong một thùng rác ở góc phố!Mới đây, một xóm nhỏ tại huyện Thạnh Hóa (Long</p>
+                                    <div class="title">FUN88-THƯỞNG ĐĂNG KÝ 120% TẠI THỂ THAO</div>
+                                    <p>THƯỞNG ĐĂNG KÝ – 120% TẠI THỂ THAO SABA. NHẬN ĐẾN 3,800,000 VNĐ TIỀN THƯỞNG ĐĂNG KÝ THỂ ...</p>
                                 </div>
                                 <div class="fullList_tool">
                                     <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>06-06 21:48</span>
-                                    </p>
                                 </div>
                             </div>
                         </a>
@@ -172,18 +140,14 @@
 
                     <li>
                         <a href="#/lotteryRef?p=11" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/lotteryRef11_01.jpg);"></div>
+                            <div class="fullList2_img" style="background-image: url(images/newsRef/lotteryRef4_01.jpg);"></div>
                             <div class="fullList_msg">
                                 <div>
-                                    <div class="title">Vứt nhầm 12 tờ vé số trị giá 180 triệu, cả xóm lục tung thùng rác tìm giữa đêm khuya</div>
-                                    <p>Được biết, chiếc vé cuối cùng cũng đã chịu "xuất đầu lộ diện" trong một thùng rác ở góc phố!Mới đây, một xóm nhỏ tại huyện Thạnh Hóa (Long</p>
+                                    <div class="title">AE888-THƯỞNG 50% NẠP LẦN 2</div>
+                                    <p>THƯỞNG 50% NẠP LẦN HAI Thưởng 50% khi nạp tiền lần 2 lên tới 2,888,000 VND ☆Thời gian ...</p>
                                 </div>
                                 <div class="fullList_tool">
                                     <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>06-06 21:48</span>
-                                    </p>
                                 </div>
                             </div>
                         </a>
