--- a/lotteryRef/lotteryRef_2.html
+++ b/lotteryRef/lotteryRef_2.html
@@ -10,7 +10,7 @@
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/lotteryRef1_01.jpg">
+                <img src="images/newsRef/lotteryRef2_01.jpg">
                 <p></p>
             </div>
 
@@ -26,96 +26,105 @@
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/lotteryRef1_02.jpg">
+                <img src="images/newsRef/lotteryRef2_02.jpg">
                 <p>Kèo nhà cái: Nhận định trận đấu Anh vs Scotland</p>
             </div>
 
-            <!-- === 文章內容 === -->
-            <div class="newsRef_txt">
-                <ul>
-                    <li>
-                        Nhà cái uy tín Fun88 được thành lập vào ngày 01/06/2008, đã có thâm niên nhiều năm hoạt động tại Việt Nam. Là nhà cái uy tín nhất châu Á và đang mở rộng thị trường tại Châu Âu. Hiện nay, Fun88 có nhiều khách hàng thân thiết và cung cấp nhiều trò chơi
-                        hấp dẫn nhất.
-                    </li>
-                    <li>Nhà cái Fun88 là một nhà cái uy tín tại Việt Nam và trên thế giới, luôn luôn hỗ trợ 24/7 và nhân viên tại đây rất nhiệt tình giải quyết mọi thắc mắc của người chơi. Nhà cái Fun88 thường có những chương trình khuyến mãi hết sức hấp
-                        dẫn.
-                    </li>
-                </ul>
-            </div>
-
-            <!-- === 文章標題 === -->
             <div class="newsRef_title">
                 <!-- 標題文字 -->
-                <p>VÉ CƯỢC EURO MIỄN PHÍ TẠI THỂ THAO NHÀ CÁI UY TÍN FUN88</p>
+                <p>Kèo nhà cái nhận định trước trận đấu</p>
             </div>
 
-            <!-- === 文章內容 === -->
-            <div class="newsRef_txt">
-                <ul>
-                    <li>Với thế mạnh của mình về cá cược thể thao và chào mừng sự kiện Euro sắp diễn ra nhà cái uy tín Fun88 đã tung chương trình khuyến mãi dấp dẫn cho các thành viên của mình ”VÉ CƯỢC EURO MIỄN PHÍ TẠI THỂ THAO FUN88” cược thả ga cùng Fun88</li>
-                    <li>
-                        <p><span>Thời gian Khuyến mãi:</span> 01/05/2021 (00:00 GMT+8) – 10/06/2021 (23:59 GMT+8)</p>
-                        <p><span>Áp dụng:</span> Tất cả thành viên Fun88 Việt Nam</p>
-                        <p><span>Sản phẩm:</span>Thể Thao FUN88</p>
-                        <p><span>Chi tiết giải thưởng:</span> Thành viên cần đạt doanh thu yêu cầu của tất cả sản phẩm để nhận thưởng vé cược miễn phí tại thể thao Fun88, dành riêng cho cược giải đấu Euro 2021.</p>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- === 文章表格 === -->
-            <div class="newsRef_tb">
-                <table>
-                    <tr>
-                        <th>Thời Gian</th>
-                        <th>Doanh Thu Yêu Cầu</th>
-                        <th>Tiền Thưởng</th>
-                        <th>Điều Kiện Rút Tiền</th>
-                        <th>Cập Nhật Thưởng</th>
-                    </tr>
-                    <tr>
-                        <td>01/05/2021 (00:00 GMT+8) – 10/06/2021 (23:59 GMT+8)</td>
-                        <td>20,000,000</td>
-                        <td>Vé cược miễn phí 100,000 VNĐ tại Thể Thao Fun88</td>
-                        <td>x1</td>
-                        <td>Ngày 11/06/2021</td>
-                    </tr>
-                </table>
-            </div>
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <p><span>Cách thức tham gia:</span> Thành viên không cần đăng ký tham gia khuyến mãi. Tiền thưởng sẽ được cập nhật vào tài khoản của thành viên hợp lệ theo thời gian trên.</p>
+                        <span style="font-weight:bold;">Kèo Nhà cái </span>thường ví von rằng ĐT Anh ở thế “đàn anh” so với ĐT Scotland khi nhìn lại thành tích đối đầu trong hơn 3 thập kỷ trở lại đây giữa hai đội. Và đêm nay, nhiều khả năng Tam sư sẽ
+                        tiếp tục khẳng định vị thế cửa trên của mình so với Scotland.
                     </li>
+                    <li>Tính từ năm 1988 đến nay, Anh và Scotland đã có tổng cộng 9 lần đối đầu trên mọi đấu trường. Kết quả, Anh được ăn mừng tới 7 lần. Hai bên hòa 1 trận và Scotland chỉ được nếm trải cảm giác thắng trận đúng 1 lần. Có thể nói trong vòng
+                        hơn 3 thập kỷ trở lại đây, hiếm có đối thủ nào bị Tam sư bắt nạt nhiều như Scotland.
+                    </li>
+                    <li>Trong quãng thời gian kể trên, có thể nói Scotland cứ hễ gặp Anh là như cua gặp ếch. Bằng chứng là có đến 5 trận trong số đó Scotland không thể ghi bàn vào lưới Anh. Có nghĩa 5/7 trận thua này, Scotland không thể kiếm được bàn danh
+                        dự nào cho mình.</li>
                 </ul>
             </div>
 
-            <!-- === 文章清單2 (列表序號) === -->
-            <div class="newsRef_list2">
-                <div class="title">Cách thức tham gia:</div>
+            <!-- === 文章圖片 === -->
+            <div class="newsRef_img">
+                <img src="images/newsRef/lotteryRef2_03.jpg">
+            </div>
+
+            <!-- === 文章內容 === -->
+            <div class="newsRef_txt">
                 <ul>
-                    <li>Vé cược miễn phí từ khuyến mãi này chỉ có thể cược tại giải EURO của Thể Thao Fun88.</li>
-                    <li>Tất cả cược Hòa sẽ không được tính vào doanh thu yêu cầu. Bất kỳ vé cược đặt tại tỷ lệ cược: DEC
-                        < 1.7, MY 0 – 0.69, HK < 0.7, INDO ≤ -1.43, US ≤ -143 sẽ không được tính vào doanh thu yêu cầu. Đối với các vé cược có kết quả Thắng Nửa, Thua Nửa, một nửa giá trị vé cược sẽ được tính cho doanh thu hợp lệ áp dụng cho khuyến mãi này.</li>
-                            <li>Nếu thành viên bị phát hiện gian lận, có hành vi xấu hoặc trục lợi khuyến mãi, Fun88 có toàn quyền huỷ tất cả tiền thưởng hoặc chặn/ hủy bỏ toàn bộ đơn tham gia khuyến mãi.</li>
-                            <li>Vé cược miễn phí sẽ hết hạn sau 7 ngày từ khi cập nhật thưởng nếu thành viên không sử dụng.
-                            </li>
-                            <li>Để hợp lệ nhận thưởng, thành viên cần có ít nhất một lần cược tại thể thao Fun88 trước thời gian cập nhật thưởng. Điều Khoản và Điều Kiện Chung của nhà cái uy tín Fun88 sẽ được áp dụng cho chương trình khuyến mãi này.</li>
+                    <li>1996 chính là kỳ EURO gần nhất mà Scotland giành được vé tham dự VCK. Thật trùng hợp, giải đó Scotland cũng nằm chung bảng với Anh. Và trận đấu giữa Anh và Scotland cũng diễn ra trên sân Wembley. Trận ấy Anh đánh bại Scotland với tỷ
+                        số 2-0. Bàn thắng ấn định chiến thắng cho Tam sư do huyền thoại Paul Gascoigne đến nay vẫn được xếp là một trong những bàn thắng đẹp nhất, đáng nhớ nhất trong lịch sử tham dự EURO của Tam sư.</li>
+                    <li>1/4 thế kỷ đã trôi qua kể từ trận Anh thắng Scotland 2-0 tại EURO 1996. Trong thành phần Tam sư bây giờ có một ngôi sao trẻ vừa nhuộm tóc giống với kiểu tóc của Gascoigne tại EURO 1996. Đó là Phil Foden. Rất có thể đêm nay khi Foden
+                        bước ra sân cùng Anh, rất nhiều fan sẽ nhớ về hình ảnh của Gascoigne cách đây 25 năm. Và rất có thể Foden sẽ xát muối vào các fan Scotland giống như Gascoigne đã làm cách đây 25 năm.
+                    </li>
+                    <li>Lứa sao đương đại của Anh có thừa cơ sở để có thể tiếp tục giúp Tam sư duy trì vị thế “đàn anh” trước Scotland. Anh đang trải qua mạch 7 trận toàn thắng trên mọi đấu trường. Trong 7 trận toàn thắng này, Anh giữ sạch lưới tới 6 trận.
+                        Ở trận còn lại, Anh cũng chỉ để lọt lưới có 1 bàn mà thôi.</li>
+                    <li>Kể cả khi thiếu vắng trung vệ Harry Maguire, Anh vẫn duy trì được hàng thủ chắc chắn của mình. Trận này, hàng thủ của Anh cũng như các tiền vệ trung tâm Declan Rice và Kalvin Phillips chẳng lạ gì những ngôi sao có khả năng tạo đột
+                        biến nhất bên phía Scotland. Bởi những ngôi sao sáng giá nhất của Scotland như Andy Robertson (Liverpool), Che Adams (Southampton), Lyndon Dykes (QPR), John McGinn (Aston Villa), Stuart Armstrong (Southampton) đều thi đấu tại Anh
+                        nhiều năm qua. Nên khả năng Scotland có thể tạo được bất ngờ trước Anh càng khó.</li>
+                </ul>
+            </div>
+            <!-- === 文章圖片 === -->
+            <div class="newsRef_img">
+                <img src="images/newsRef/lotteryRef2_04.jpg">
+            </div>
+
+            <!-- === 文章內容 === -->
+            <div class="newsRef_txt">
+                <ul>
+                    <li>Trong 9 trận gần đây, Scotland chỉ được ăn mừng chiến thắng có 2 trận. Những bại tướng hiếm hoi của Scotland đều là những đội nhược tiểu ở châu Âu gồm Luxembourg và Faroe Islands. Còn lại, Scotland đã thua cả Israel, Slovakia và Czech.
+                        Đó đều là những đội không được đánh giá cao bằng Anh.</li>
+                    <li>Nếu tính thêm cả đấu trường World Cup thì giải đấu lớn gần nhất mà Scotland được góp mặt vào VCK là World Cup 1998, tức là đã cách đây 23 năm. Có lẽ khoảng thời gian phải xa rời các đấu trường lớn quá lâu đã ảnh hưởng không nhỏ tới
+                        tâm lý và bản lĩnh của các cầu thủ Scotland. Không phải vô cớ mà Scotland phải chấp nhận thất bại trước Czech trong ngày ra quân EURO 2020 tâm phục khẩu phục đến vậy. Không phải vô cớ mà Scotland để cho tiền đạo Patrik Schick của
+                        Czech ghi bàn từ cự ly giữa sân.</li>
+                    <li>So với Czech ở EURO này, Anh sở hữu nhiều sao hơn hẳn, có phong độ cao hơn hẳn. Anh lại còn có lợi thế chơi ở thánh địa Wembley của mình. Nên đêm nay, nhiều khả năng Anh sẽ lại khiến Scotland phải nhận thất bại nặng nề.</li>
+                    <li>
+                        <p><span>Dưới đây là kèo nhà cái tỷ lệ Châu Á: Nguồn kèo có tại</span><span style="color:red;"><a href="https://www.ae6888.com/">AE888</a></span> </p>
+                    </li>
+                </ul>
+            </div>
+            <!-- === 文章圖片 === -->
+            <div class="newsRef_img">
+                <img src="images/newsRef/lotteryRef2_05.jpg">
+            </div>
+            <!-- === 文章內容 === -->
+            <div class="newsRef_txt">
+                <ul>
+                    <li><span style="font-weight:bold;">Đội hình xuất phát của hai đội dựa trên nhận định của Kèo Nhà Cái.</span></li>
+                </ul>
+            </div>
+            <!-- === 文章圖片 === -->
+            <div class="newsRef_img">
+                <img src="images/newsRef/lotteryRef2_06.jpg">
+            </div>
+            <div class="newsRef_txt">
+                <ul>
+                    <li><span style="font-weight:bold;">Dự đoán tỷ số của Kèo Nhà Cái: Anh 2- 1 Scotland</span></li>
                 </ul>
             </div>
 
             <!-- 文章連結按鈕 -->
             <div class="newsRef_btn">
                 <div class="btn_linear_c1 btn">
-                    <div class="btn_cnt">Dăng ký ngay</div>
+                    <div class="btn_cnt">Read More</div>
                 </div>
             </div>
         </div>
 
         <div class="newsRef_menu">
-            <div class="lotteryRef_more" id="lotteryRef_more">
-                <div class="mainMsg-title">閱讀更多</div>
+            <div class="newsRef_hot" id="newsRef_hot">
+                <div class="mainMsg-title">Tin hot</div>
+                <ul></ul>
+            </div>
+            <div class="newsRef_imp" id="newsRef_imp">
+                <div class="mainMsg-title">Tin quan trọng</div>
                 <ul></ul>
             </div>
         </div>
@@ -124,4 +133,4 @@
 
 <!-- ========================================= -->
 <script src="js/index.js"></script>
-<script src="js/lotteryRef.js"></script>
+<script src="js/newsRef.js"></script>
