--- a/lotteryRef/lotteryRef_3.html
+++ b/lotteryRef/lotteryRef_3.html
@@ -2,161 +2,102 @@
     <!-- 新聞內頁 -->
     <div class="newsRef_box">
         <div class="newsRef_cnt">
-            <div class="fullList">
-                <div class="mainMsg-title">Tin tức</div>
+            <!-- === 文章標題 === -->
+            <div class="newsRef_title">
+                <!-- 標題文字 -->
+                <p>Nhà cái uy tín Fun88- Vé cược thể thao miễnphí</p>
+            </div>
+
+            <!-- === 文章圖片 === -->
+            <div class="newsRef_img">
+                <img src="images/newsRef/lotteryRef3_01.jpg">
+                <p></p>
+            </div>
+
+
+            <!-- === 文章內容 === -->
+            <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <a href="#/news?p=7" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList7-01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Cách chơi trò chơi</div>
-                                    <p>Baccarat Baccarat là một trong các trò chơi trong Casino được nhiều chuyên gia cho rằng có nhiều khả năng thắng nhất đối với người chơi. Như các bạn cũng đ&</p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Cách chơi trò chơi</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>27-06 00:52</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
+                        <span style="font-weight:bold;">Nhà cái uy tín Fun88 </span>được thành lập vào ngày 01/06/2008, đã có thâm niên nhiều năm hoạt động tại Việt Nam. Là nhà cái uy tín nhất châu Á và đang mở rộng thị trường tại Châu Âu. Hiện nay, Fun88
+                        có nhiều khách hàng thân thiết và cung cấp nhiều trò chơi hấp dẫn nhất.
                     </li>
-                    <li>
-                        <a href="#/news?p=8" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList8-01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Xổ số- cờ bạc hay trò chơi giải trí?</div>
-                                    <p>Xổ số là trò chơi không phải dành cho người nghèo và nếu Nhà nước biết cách quản lý thì sẽ phát huy được lợi ích của </p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>24-06 19:53</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#/news?p=9" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList9-01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Tình tiết mới vụ nhầm kết quả xổ số ở Hậu Giang: Giám đốc cty xổ số nói gì với quay phim?</div>
-                                    <p>TPO - Khi em thiếu nhi rút nhầm thẻ số 7, một thành viên Hội đồng Giám sát (HĐGS) Xổ số kiến thiết (XSKT) tỉnh thắc mắc. Thư ký HĐGS đi xác minh, qu&aac</p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>17-06 07:44</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#/news?p=10" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList10-01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Phá đường dây ghi lô đề hơn 15 tỷ</div>
-                                    <p>Giang, Sơn, Pháp cùng hơn 50 người thành lập đường dây đánh bạc bằng hình thức ghi lô đề. Trong 3 tháng, số tiền nhóm nghi phạm giao dịch l</p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>11-06 18:09</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#/news?p=11" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList11-01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Người trúng thưởng xổ số được yêu cầu giữ bí mật thông tin</div>
-                                    <p>Đó là một trong những đề xuất mà Bộ Tài chính đưa ra để lấy ý kiến tại Dự thảo Thông tư hướng dẫn hoạt động kinh doanh xổ số tự chọn số điện toán</p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>10-06 22:57</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#/news?p=12" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList12-01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Mỹ tặng tiền, bia, mở xổ số 1 triệu USD cổ vũ dân tiêm vắc xin COVID-19</div>
-                                    <p>TTO - Chính quyền các bang và doanh nghiệp Mỹ đang dùng đủ mọi cách từ tặng tiền, xổ số đến đăng quảng cáo... để khuyến khích người dân đi ti&eci</p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>07-06 20:44</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#/news?p=13" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList13-01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Thu ngân sách từ thuế vẫn tăng mạnh bất chấp dịch bệnh</div>
-                                    <p>Trong tháng 5, tổng thu ngân sách Nhà nước do cơ quan Thuế quản lý ước đạt 73.000 tỷ đồng, tương đương 6,5% dự toán và tăng 20,1% so với cùng kỳ </p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>07-06 18:39</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#/news?p=14" style="display: flex;">
-                            <div class="fullList_img" style="background-image: url(images/newsRef/newsList14-01.jpg);"></div>
-                            <div class="fullList_msg">
-                                <div>
-                                    <div class="title">Vứt nhầm 12 tờ vé số trị giá 180 triệu, cả xóm lục tung thùng rác tìm giữa đêm khuya</div>
-                                    <p>Được biết, chiếc vé cuối cùng cũng đã chịu "xuất đầu lộ diện" trong một thùng rác ở góc phố!Mới đây, một xóm nhỏ tại huyện Thạnh Hóa (Long</p>
-                                </div>
-                                <div class="fullList_tool">
-                                    <div class="more">Thông tin xổ số</div>
-                                    <p>
-                                        <span>Tử điển xổ số</span>
-                                        <span>06-06 21:48</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-
+                    <li>Nhà cái Fun88 là một <span style="font-weight:bold;">nhà cái uy tín </span>tại Việt Nam và trên thế giới, luôn luôn hỗ trợ 24/7 và nhân viên tại đây rất nhiệt tình giải quyết mọi thắc mắc của người chơi. Nhà cái Fun88 thường có những
+                        chương trình khuyến mãi hết sức hấp dẫn.</li>
                 </ul>
             </div>
+
+            <!-- === 文章圖片 === -->
+            <div class="newsRef_img">
+                <img src="images/newsRef/lotteryRef3_02.jpg">
+            </div>
+
+            <div class="newsRef_title">
+                <!-- 標題文字 -->
+                <p>VÉ CƯỢC EURO MIỄN PHÍ TẠI THỂ THAO NHÀ CÁI UY TÍN FUN88</p>
+            </div>
+
+
+            <!-- === 文章內容 === -->
+            <div class="newsRef_txt">
+                <ul>
+                    <li>Với thế mạnh của mình về cá cược thể thao và chào mừng sự kiện Euro sắp diễn ra nhà cái uy tín Fun88 đã tung chương trình khuyến mãi dấp dẫn cho các thành viên của mình ”VÉ CƯỢC EURO MIỄN PHÍ TẠI THỂ THAO FUN88” cược thả ga cùng Fun88</li>
+                </ul>
+            </div>
+
+            <!-- === 文章內容 === -->
+            <div class="newsRef_txt">
+                <p><span style="font-weight:bold;">Thời gian Khuyến mãi:</span>01/05/2021 (00:00 GMT+8) – 10/06/2021 (23:59 GMT+8)</p>
+                <p><span style="font-weight:bold;">Áp dụng:</span>Tất cả thành viên Fun88 Việt Nam</p>
+                <p><span style="font-weight:bold;">Sản phẩm:</span>Thể Thao FUN88</p>
+                <p><span style="font-weight:bold;">Chi tiết giải thưởng:</span>Thành viên cần đạt doanh thu yêu cầu của tất cả sản phẩm để nhận thưởng vé cược miễn phí tại thể thao Fun88, dành riêng cho cược giải đấu Euro 2021. Chi tiết như sau:</p>
+            </div>
+
+            <!-- === 文章表格 === -->
+            <div class="newsRef_tb">
+                <table>
+                    <tr>
+                        <th>Thời Gian</th>
+                        <th>Doanh Thu Yêu Cầu</th>
+                        <th>Tiền Thưởng</th>
+                        <th>Điều Kiện Rút Tiền</th>
+                        <th>Cập Nhật Thưởng</th>
+                    </tr>
+                    <tr>
+                        <td>01/05/2021 (00:00 GMT+8) – 10/06/2021 (23:59 GMT+8)</td>
+                        <td>20,000,000</td>
+                        <td>Vé cược miễn phí 100,000 VNĐ tại Thể Thao Fun88</td>
+                        <td>x1</td>
+                        <td>Ngày 11/06/2021</td>
+                    </tr>
+                </table>
+            </div>
+
+            <!-- === 文章清單2 (列表序號) === -->
+            <div class="newsRef_list2">
+                <div class="title">Cách thức tham gia:</div>
+                <ul>
+                    <li>Vé cược miễn phí từ khuyến mãi này chỉ có thể cược tại giải EURO của Thể Thao Fun88.</li>
+                    <li>Tất cả cược Hòa sẽ không được tính vào doanh thu yêu cầu. Bất kỳ vé cược đặt tại tỷ lệ cược: DEC
+                        < 1.7, MY 0 – 0.69, HK < 0.7, INDO ≤ -1.43, US ≤ -143 sẽ không được tính vào doanh thu yêu cầu. Đối với các vé cược có kết quả Thắng Nửa, Thua Nửa, một nửa giá trị vé cược sẽ được tính cho doanh thu hợp lệ áp dụng cho khuyến mãi này.</li>
+                            <li>Nếu thành viên bị phát hiện gian lận, có hành vi xấu hoặc trục lợi khuyến mãi, Fun88 có toàn quyền huỷ tất cả tiền thưởng hoặc chặn/ hủy bỏ toàn bộ đơn tham gia khuyến mãi.</li>
+                            <li>Vé cược miễn phí sẽ hết hạn sau 7 ngày từ khi cập nhật thưởng nếu thành viên không sử dụng.
+                            </li>
+                            <li>Để hợp lệ nhận thưởng, thành viên cần có ít nhất một lần cược tại thể thao Fun88 trước thời gian cập nhật thưởng. Điều Khoản và Điều Kiện Chung của nhà cái uy tín Fun88 sẽ được áp dụng cho chương trình khuyến mãi này.</li>
+                </ul>
+            </div>
+            <!-- 文章連結按鈕 -->
+            <div class="newsRef_btn">
+                <a href="https://www.fun212212.com/">
+
+                    <div class="btn_linear_c1 btn">
+                        <div class="btn_cnt">Dăng ký ngay</div>
+                    </div>
+                </a>
+            </div>
+
+
+
         </div>
 
         <div class="newsRef_menu">
