--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 
                 <div class="rightTool" id="rightTool">
                     <div class="floatAd">
-                        <img src="images/adBanner/floatAd-03.jpg">
-                        <img src="images/adBanner/floatAd-04.jpg">
+                        <img src="images/adBanner/ad7.gif">
+                        <img src="images/adBanner/ad8.gif">
                     </div>
                     <div class="goTop" id="goTop">
                         <img src="images/icon/arrow-top.png">
