--- a/lotteryRef/lotteryRef_10.html
+++ b/lotteryRef/lotteryRef_10.html
@@ -5,32 +5,16 @@
             <!-- === 文章標題 === -->
             <div class="newsRef_title">
                 <!-- 標題文字 -->
-                <p>123BET-ĐĂNG KÝ NHẬN NGAY 100K</p>
+                <p>FUN88-THƯỞNG ĐĂNG KÝ 120% TẠI THỂ THAO</p>
             </div>
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/newsRef/lotteryRef7_01.jpg">
-                <p></p>
-            </div>
-            <!-- === 文章標題 === -->
-            <div class="newsRef_title">
-                <!-- 標題文字 -->
-                <p>Đăng ký và tải APP nhận ngay 100k.</p>
-            </div>
+                <img src="images/newsRef/lotteryRef8_01.jpg">
 
-            <!-- === 文章內容 === -->
-            <div class="newsRef_txt">
-                <ul>
-                    <li><span style="font-weight:bold;">☆Nội dung khuyến mãi :</span></li>
-                </ul>
-            </div>
+                <p>NHẬN ĐẾN 3,800,000 VNĐ TIỀN THƯỞNG ĐĂNG KÝ THỂ THAO SABA</p>
+                <img src="images/newsRef/lotteryRef8_02.jpg">
 
-            <!-- === 文章清單2 (列表序號) === -->
-            <div class="newsRef_list2">
-                <ul>
-                    <li>Hội viên đăng ký tài khoản mới nhận ngay 100k</li>
-                </ul>
             </div>
 
             <!-- === 文章內容 === -->
