--- a/index.html
+++ b/index.html
@@ -94,41 +94,42 @@
                                     <canvas id='mainVerify'></canvas>
                                 </div>
                             </div>
-
-                            <div class="signIn_btn">
-                                <div class="btn_linear_c2 btn" data-btn="signIn">
-                                    <div class="btn_cnt">Đăng nhập</div>
-                                </div>
-                                <div class="btn_linear_c3 btn" data-btn="regd">
-                                    <div class="btn_cnt">Đăng kí</div>
-                                </div>
+                        </div>
+                        <div class="signIn_btn">
+                            <div class="btn_linear_c2 btn" data-btn="signIn">
+                                <div class="btn_cnt">Đăng nhập</div>
+                            </div>
+                            <div class="btn_linear_c3 btn" data-btn="regd">
+                                <div class="btn_cnt">Đăng kí</div>
                             </div>
                         </div>
                     </div>
 
                     <div data-signIn="1">
-                        <div class="signIn_msg">
-                            <div>
-                                <div class="signIn_icon member"></div>
-                                <p>test123456789123456</p>
+                        <div class="signIn_on">
+                            <div class="signIn_msg">
+                                <div>
+                                    <div class="signIn_icon member"></div>
+                                    <p>test123456789123456</p>
+                                </div>
+                                <div>
+                                    <div class="signIn_icon chip"></div>
+                                    <p>1,000,000,000.00</p>
+                                </div>
+                                <div>
+                                    <div class="signIn_icon mail"></div>
+                                    <p>99+</p>
+                                </div>
                             </div>
-                            <div>
-                                <div class="signIn_icon chip"></div>
-                                <p>1,000,000,000.00</p>
-                            </div>
-                            <div>
-                                <div class="signIn_icon mail"></div>
-                                <p>99+</p>
-                            </div>
-                        </div>
-                        <div class="signIn_btn">
-                            <div class="btn_linear_c2 btn" data-btn="signOut">
-                                <div class="btn_cnt">Đăng xuất</div>
-                            </div>
-                            <div class="btn_linear_c3 btn" data-btn="mbrMsg">
-                                <a href="#/member">
-                                    <div class="btn_cnt">Thông tin tài khoản</div>
-                                </a>
+                            <div class="signIn_btn">
+                                <div class="btn_linear_c2 btn" data-btn="signOut">
+                                    <div class="btn_cnt">Đăng xuất</div>
+                                </div>
+                                <div class="btn_linear_c3 btn" data-btn="mbrMsg">
+                                    <a href="#/member">
+                                        <div class="btn_cnt">Thông tin tài khoản</div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
