--- a/lotteryRef/lotteryRef_11.html
+++ b/lotteryRef/lotteryRef_11.html
@@ -5,42 +5,45 @@
             <!-- === 文章標題 === -->
             <div class="newsRef_title">
                 <!-- 標題文字 -->
-                <p>FUN88-THƯỞNG ĐĂNG KÝ 120% TẠI THỂ THAO</p>
+                <p>AE888-THƯỞNG 50% NẠP LẦN 2</p>
             </div>
 
             <!-- === 文章圖片 === -->
             <div class="newsRef_img">
-                <img src="images/newsRef/lotteryRef8_01.jpg">
+                <img src="images/newsRef/lotteryRef4_01.jpg">
             </div>
-            <!-- === 文章圖片 === -->
-            <div class="newsRef_img">
-                <p>NHẬN ĐẾN 3,800,000 VNĐ TIỀN THƯỞNG ĐĂNG KÝ THỂ THAO SABA</p>
-                <img src="images/newsRef/lotteryRef10_02.jpg">
+
+            <div class="newsRef_title">
+                <!-- 標題文字 -->
+                <p>THƯỞNG 50% NẠP LẦN HAI</p>
             </div>
+
 
             <!-- === 文章內容 === -->
             <div class="newsRef_txt">
-                <p><span style="font-weight:bold;">Thời gian Khuyến mãi: </span>01/02/2021 (00:00 GMT+8) – 28/02/2021 (23:59 GMT+8)</p>
-                <p><span style="font-weight:bold;">Áp dụng: </span>1.000 thành viên chơi với tiền VND và chưa từng tham gia Tiền Thưởng Đăng Ký Thể Thao SABA trước đó.</p>
-                <p><span style="font-weight:bold;">Sản phẩm: Thể Thao SABA </span></p>
-                <p><span style="font-weight:bold;">Chi tiết giải thưởng: </span>Thành viên sẽ nhận được 120% Tiền Thưởng Đăng Ký tại Thể Thao SABA lên đến 3,800,000 VNĐ. Tiền thưởng sẽ được cập nhật vào tài khoản khi doanh thu đặt cược tại Thể Thao SABA
-                    gấp 22 lần tiền thưởng cộng tiền gửi. Tiền gửi hợp lệ tối thiểu để nhận thưởng là 200,000 VNĐ.</p>
+                <ul>
+                    <li><span style="font-weight:bold;">Thưởng 50% khi nạp tiền lần 2 lên tới 2,888,000 VND</span></li>
+                    <li><span style="font-weight:bold;">☆Thời gian khuyến mãi : vô thời hạn </span></li>
+                    <li><span style="font-weight:bold;">☆ Đối tượng khuyến mãi:<span style="color:red;"> Thành viên tại AE888.</span></span>
+                    </li>
+                    <li><span style="font-weight:bold;">☆ Nội dung khuyến mãi:</span></li>
+                </ul>
             </div>
 
             <!-- === 文章表格 === -->
             <div class="newsRef_tb">
                 <table>
                     <tr>
-                        <th>Tiền Thưởng </th>
-                        <th>Điều Kiện Rút Tiền</th>
-                        <th>Tiền Thưởng Tối Đa</th>
-                        <th>Tiền Gửi Tối Thiểu</th>
+                        <th>Nạp tối thiểu</th>
+                        <th>% Thưởng</th>
+                        <th>Thưởng tối đa</th>
+                        <th>Vòng cược</th>
                     </tr>
                     <tr>
-                        <td>120%</td>
-                        <td>x22</td>
-                        <td>3,800,000 VNĐ</td>
                         <td>200,000 VNĐ</td>
+                        <td>100%</td>
+                        <td>6,888.000 VNĐ</td>
+                        <td>x20</td>
                     </tr>
                 </table>
             </div>
@@ -49,32 +52,12 @@
             <div class="newsRef_txt">
                 <ul>
                     <li><span style="font-weight:bold;">Ví dụ:</span></li>
-                    <li>Tiền gửi = 1,000,000 VND</li>
-                    <li>Tiền thưởng = 120% x 1,000,000 VND = 1,200,000 VND</li>
-                    <li>Doanh thu yêu cầu = (1,200,000 VND + 1,000,000 VND) x 22 = 48,400,000 VND”</li>
-                </ul>
-            </div>
-
-            <!-- === 文章清單2 (列表序號) === -->
-            <div class="newsRef_list2">
-                <p><span style="font-weight:bold;">Cách tham gia:</span></p>
-                <ul>
-                    <li>Để nhận tiền thưởng, thành viên cần gửi tiền hoặc chuyển tiền vào tài khoản Thể Thao. Sau đó truy cập vào trang Khuyến Mãi/ Thành Viên Mới / Chọn Khuyến Mãi 120% THƯỞNG ĐĂNG KÝ THỂ THAO SABA! 2. Tiền thưởng sẽ tạm thời khóa lại và
-                        sẽ cập nhật khi doanh thu đặt cược tại Thể Thao gấp 22 lần tiền gửi cộng tiền thưởng. Bạn sẽ nhận được thông báo khi đáp ứng đủ yêu cầu doanh thu đặt cược.</li>
-                </ul>
-            </div>
-
-            <!-- === 文章清單2 (列表序號) === -->
-            <div class="newsRef_list2">
-                <p><span style="font-weight:bold;">Điều khoản và điều kiện:</span></p>
-                <ul>
-                    <li>Nếu doanh thu yêu cầu cho khuyến mãi này không được đáp ứng trong vòng 30 ngày kể từ ngày nhận thưởng, tiền thưởng sẽ bị hủy bỏ.</li>
-                    <li>Tiền thưởng từ khuyến mãi này phải trải qua ít nhất MỘT lần cược trước khi rút ra.</li>
-                    <li>Tất cả cược Hòa sẽ không được tính vào doanh thu yêu cầu. Bất kỳ vé cược đặt tại tỷ lệ cược: DEC
-                        < 1.7, MY 0 – 0.69, HK < 0.7, INDO ≤ -1.43, US ≤ -143 sẽ không được tính vào doanh thu yêu cầu. Vui lòng chú ý chỉ có tiền gửi và đặt cược tại Thể Thao SABA được tính vào doanh thu yêu cầu cho khuyến mãi này. Các cược đặt vào sản phẩm khác như Thể Thao
-                            IM, FUN88 E-sports, Thể Thao Fun88, Thể Thao CMD, Sòng bài, Xổ Số, Trò Chơi hay các loại khác, sẽ không được tính vào doanh thu. Đối với các vé cược có kết quả Thắng Nửa, Thua Nửa, một nửa giá trị vé cược sẽ được tính cho doanh
-                            thu hợp lệ áp dụng cho khuyến mãi này.</li>
-                            <li>Khuyến mãi này chỉ áp dụng cho Thể Thao SABA.</li>
+                    <li>– Tiền nạp: 500,000 VND</li>
+                    <li>– Tiền thưởng: 50% x 500,000 = 250,000 VND</li>
+                    <li>– Doanh thu cược: (500,000 + 250,000) x 18 = 13,500,000 VND</li>
+                    <li>Mỗi thành viên chỉ được tham gia khuyến mãi này 1 lần. Khuyến mãi này chỉ được nhận trong ngày có giao dịch nạp tiền thành công.</li>
+                    <li>Bấm vào <span style="font-weight:bold;">ĐĂNG KÝ NGAY </span>và liên hệ Hỗ Trợ Trực Tuyến để nhận thưởng.</li>
+                    <li>*Không áp dụng cho sản phẩm Xổ Số và Mini Game.</li>
                 </ul>
             </div>
 
@@ -92,8 +75,8 @@
             <div class="newsRef_txt">
                 <ul>
                     <li>
-                        <p><span style="font-weight:bold;">>>>>>Tham khảo thêm các Nhà cái uy tín</span><span style="color:red;"><a href="https://www.vnc88.com/">tại đây<<<<<</a></span> </p>
-                        <!-- 在此處查看更多信譽良好的博彩公司 連回首頁的排名列表 -->
+                        <p><span style="font-weight:bold;">>>>>>Xem thêm các nhà cái uy tín:</span><span style="color:red;"><a href="https://www.vnc88.com/">tại đây<<<<<</a></span> </p>
+                        <!-- 查看更多信譽良好的博彩公司 連回首頁的排名列表 -->
                     </li>
                 </ul>
             </div>
