--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
     <!-- <a href="#/newsRef?p=1">newsRef</a> -->
     <!-- 主頁博彩跳頁(範例) -->
     <!-- <a href="#/lotteryRef?p=1">lotteryRef</a>  -->
-
+    
     <!-- 內頁新聞跳頁(範例) -->
     <!-- <a href="#/news?p=1">news</a> -->
     <!-- 內頁博跳頁(範例) -->
     <!-- <a href="#/lottery?p=1">lottery</a> -->
     <!-- 內頁資源頁(範例) -->
     <!-- <a href="#/resources?p=1">resources</a> -->
+
+    <!-- 投注公司介紹跳頁(範例) -->
+    <!-- <a href="#/betRef?p=1">resources</a> -->
 
 
     <!-- ===== header start ===== -->
